# KlumzyEngine

./: .clang-format  .gitignore  .gitmodules  Build.bat  CMakeLists.txt  CREDITS.md  LICENSE.md  README.md  main_example.c
Include/: Klumzy.h  Klumzy_Common.h  Klumzy_Core_Vector2.h  Klumzy_Core_Vector3.h  Klumzy_Display.h  Klumzy_Macros.h  Klumzy_Math.h  Klumzy_Memory.h  Klumzy_Primitives.h  Klumzy_Result.h
Source/: Klumzy_Common.c  Klumzy_Display.c  Klumzy_Memory.c  Klumzy_Memory_Windows.c
Source/Editor/: Editor_main.c
